# llaas2

./: .gitignore  Cargo.toml  README.md  build.rs  main.rs
.cargo/: config.toml
crates/llaas-ai/: Cargo.toml  README.md
crates/llaas-ai/src/: classification.rs  lib.rs  translate.rs  tts.rs
crates/llaas-api/: Cargo.toml  README.md  build.rs
crates/llaas-api/proto/: content.proto
crates/llaas-api/src/: graphql.rs  lib.rs  rest.rs
crates/llaas-backend/: Cargo.toml  README.md
crates/llaas-backend/src/: ai.rs  api.rs  client.rs  common.rs  lib.rs  main.rs  resources.rs  store.rs
crates/llaas-backend/src/ai/: keywords.rs
crates/llaas-backend/src/api/: graphql.rs  messages.rs  rest.rs  server.rs
crates/llaas-backend/src/api/graphql/: mod.rs  root.rs  videos.rs
crates/llaas-backend/src/client/: app.rs  videos.rs
crates/llaas-backend/src/common/: config.rs  context.rs  errors.rs
crates/llaas-backend/src/resources/: epub.rs  video.rs
crates/llaas-backend/src/store/: database.rs  videos.rs
crates/llaas-cli/: Cargo.toml  README.md
crates/llaas-cli/src/: lib.rs  main.rs
crates/llaas-common/: Cargo.toml  README.md
crates/llaas-common/src/: lib.rs
crates/llaas-core/: Cargo.toml  README.md
crates/llaas-core/src/: lib.rs
crates/llaas-frontend/: Cargo.toml  README.md
crates/llaas-frontend/src/: lib.rs
crates/llaas-jobs/: Cargo.toml  README.md
crates/llaas-jobs/src/: lib.rs
crates/llaas-resources/: Cargo.toml  README.md
crates/llaas-resources/src/: lib.rs  video.rs
crates/llaas-store/: Cargo.toml  README.md
crates/llaas-store/src/: context.rs  database.rs  lib.rs  videos.rs
plans/: workspace-graphql-refactor.md
resources/danish/: book1.json
resources/videos/6bd50f24-9fd7-4526-a64b-5274585ecc3a/: output.en.vtt  output.es.vtt
src/: api.rs  client.rs  common.rs  database.rs  main.rs  models.rs  resources.rs
src/api/: client.rs  rest.rs  server.rs  types.rs
src/client/: app.rs  homepage.rs  videos.rs
src/common/: config.rs  context.rs  database.rs  errors.rs
src/database/: connection.rs  videos.rs
src/messages/: content.proto
src/models/: classification.rs  keywords.rs  mod.rs  pos.rs  sentiment.rs  translate.rs  tts.rs
src/resources/: epub.rs  video.rs
