[package]
name = "llaas"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-bert = "0.23.0"
tch = "0.17.0"
console = { version = "0.16.3", features = ["std"] }
prost = "0.14"
tonic = "*"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
epub = "2"
serde_json = "1"
html2text = "0.4"
unicode-segmentation = "1.13.3"
any-tts = { version = "0.1.2", features = ["metal"] } 
actix-web = "4.13.0"
leptos = { version = "0.8.12", features = ["ssr"] }
leptos_router = { version = "0.8.13", features = ["ssr"] }
json = "0.12.4"
serde = { version = "1.0.228", features=["derive"]}
surrealdb = { version = "3.1.4", features=["kv-rocksdb"]}
uuid = "1.23.3"
validator = { version = "0.20.0", features=["derive"]}
async-trait = "0.1.89"
derive_more = "2.1.1"
tokio-util = "0.7.18"
rsubs-lib = "0.3.4"
surrealdb-types = "3.1.4"

[build-dependencies]
tonic-prost-build = "*"
