[package]
name = "llaas-api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-graphql = "7.2.1"
llaas-common.workspace = true
llaas-core.workspace = true
prost = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "*"