[package]
name = "llaas-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.13.0"
any_spawner = { version = "0.3.0", features = ["tokio"] }
futures = "0.3"
leptos = { version = "0.8.12", features = ["ssr"] }
leptos_router = { version = "0.8.13", features = ["ssr"] }
llaas-api.workspace = true
llaas-common.workspace = true
llaas-jobs.workspace = true
llaas-resources.workspace = true
llaas-store.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
validator = { version = "0.20.0", features = ["derive"] }