[package]
name = "llaas-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
actix-web = "4.13.0"
any_spawner = { version = "0.3.0", features = ["tokio"] }
async-graphql = { version = "7.2.1", features = ["graphiql"] }
async-graphql-actix-web = "7.2.1"
futures = "0.3"
html2text = "0.17.1"
leptos = { version = "0.8.12", features = ["ssr"] }
leptos_router = { version = "0.8.13", features = ["ssr"] }
rust-bert = "0.23.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
surrealdb = { version = "3.1.4", features= ["kv-rocksdb"]}
validator = { version = "0.20.0", features = ["derive"] }
