[package]
name = "llaas-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "llaas-cli"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
llaas-api.workspace = true
llaas-ai.workspace = true
llaas-backend.workspace = true
llaas-common.workspace = true
llaas-resources.workspace = true
llaas-store.workspace = true
serde_json = "1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }