[package]
name = "llaas-jobs"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
apalis = "=1.0.0-rc.7"
apalis-codec = "=0.1.0-rc.7"
apalis-core = "=1.0.0-rc.7"
apalis-sql = "=1.0.0-rc.7"
apalis-sqlite = "=1.0.0-rc.7"
llaas-ai.workspace = true
llaas-common.workspace = true
llaas-core.workspace = true
llaas-resources.workspace = true
llaas-store.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }