[package]
name = "llaas-resources"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.13.0"
epub = "2"
html2text = "0.4"
llaas-ai.workspace = true
llaas-api.workspace = true
llaas-common.workspace = true
llaas-core.workspace = true
llaas-store.workspace = true
rsubs-lib = "0.3.4"
tokio = { version = "1.0", features = ["fs", "io-util"] }
tokio-util = "0.7.18"
unicode-segmentation = "1.13.3"
uuid = "1.23.3"