[package]
name = "llaas-store"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
llaas-common.workspace = true
llaas-core.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = { version = "3.1.4", features = ["kv-rocksdb"] }
surrealdb-types = "3.1.4"
tokio = { version = "1.0", features = ["sync"] }